Fixed issue where 'post-it' posts would appear too close to each other

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,8 @@ footer {
 	color: #000;
 	box-shadow: 5px 5px 7px rgba(33,33,33,.7);
 	padding: 1em 2em;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 .post_main {
